[package]
name = "ts3plugin_sys"
version = "0.1.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "TeamSpeak3 Plugin API low-level bindings"
repository = "https://github.com/Flakebi/rust-ts3plugin-sys"
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "ts3plugin_sys"

[dependencies]
libc = "*"
bitflags = "*"
