[package]
name = "ts3plugin-sys"
version = "0.5.0"
authors = ["Flakebi <flakebi@t-online.de>"]
description = "FFI bindings to the TeamSpeak3 plugin API"
repository = "https://github.com/Flakebi/rust-ts3plugin-sys"
readme = "README.md"
keywords = ["ffi", "plugin", "TeamSpeak3", "TS3"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "ts3plugin_sys"

[dependencies]
bitflags = "2"
